--- a/packages/documentation/src/pages/platform/tools/generator.mdx
+++ b/packages/documentation/src/pages/platform/tools/generator.mdx
@@ -9,54 +9,47 @@ We have a Yeoman generator for starting up new React applications in vets-websit
 
 > You can find more information about creating forms in the [forms section](/forms).
 
-## Getting Started
-
-To install the generator, you'll need to do the following:
-
-```bash
-npm install -g yo
-npm install -g @department-of-veterans-affairs/generator-vets-website
-```
-
 ## Usage
 
-Once you have the generator installed, navigate to the root of the vets-website repository and run:
+Navigate to the root of the vets-website repository and run:
 
 ```bash
-yo @department-of-veterans-affairs/vets-website
+$ yarn new:app
 ```
 
 After running the above command, the generator will start up and ask you a series of questions:
 
 ### What's the name of your application?
-> This will be the default page title. Examples: '21P-530 Burials benefits form' or 'GI Bill School Feedback Tool'
+> This will be the default page title. Examples: `21P-530 Burials benefits form` or `GI Bill School Feedback Tool`
 
 This value will be used as the page title. If you're creating a form, it will also be used as the header for the introduction page and as a header on the confirmation page.
 
 ### What folder in `src/applications/` should your app live in?
-> This can be a subfolder. Examples: 'burials' or 'edu-benefits/0993'
+> This can be a subfolder. Examples: `burials` or `edu-benefits/0993`
 
 Most of our React applications have their own folder in src/applications, so normally you want to pick a new folder. However, if you're building an application that's related to other applications, there may be a folder that your app should go in. An example would be if you were creating a new education form, you would probably create your app in edu-benefits/newform.
 
 ### What should be the name of your app's entry bundle?
-> Examples: '0993-edu-benefits' or 'feedback-tool'
+> Examples: `0993-edu-benefits` or `feedback-tool`
 
 This is the name of the bundle that Webpack builds for your application. They're normally lower case with dashes separating words. This is primarily used to link your bundle to the content page that is created as a base for your application. It doesn't show up in your code anywhere. It's also separate from the entry file.
 
-### What's the root url for this app?
-> Examples: '/gi-bill-comparison-tool/' or 'education/opt-out-information-sharing/opt-out-form-0993'
+### What's the root URL for this app?
+> Examples: `/gi-bill-comparison-tool/` or `/education/opt-out-information-sharing/opt-out-form-0993`
 
-This is the url your application will live at. In your React apps you will likely have multiple pages and the urls for those pages will have this as the base. This value also gets translated into the page for the content page, which lives in `content/pages`.
+This is the URL your application will live at, starting with a leading slash. In your React apps you will likely have multiple pages and the URLs for those pages will have this as the base. This value also gets translated into the page for the content page, which lives in `content/pages`.
 
 ### Is this a form app?
 
 If this is a form, there are some more questions after this step. If not, you're done!
 
-### What's your form number? Examples: '22-0993' or '21P-530'
+### What's your form number?
+> Examples: `22-0993` or `21P-530`
 
-This is the form number for the paper form you're converting. Normally it's something like 22-1990 or 21-22. This is used in a couple places in the UI and also as a key for the save in progress functionality of our forms.
+This is the form number for the paper form you're converting. This is used in a couple places in the UI and also as a key for the save in progress functionality of our forms.
 
-### What's the Google Analytics event prefix that you want to use? Examples: 'burials-530-' or 'edu-0993-'
+### What's the Google Analytics event prefix that you want to use?
+> Examples: `burials-530-` or `edu-0993-`
 
 Our shared form code sends events to Google Analytics and we need a unique prefix to be able to categorize the events by form. It's normally a dash separated value like `hca-` or `edu-1990-` and is made up by developers.
 
@@ -72,13 +65,13 @@ This is the respondent burden value from that information. All the information f
 
 Similarly to the last question, this is more information from the OMB data, which lives in the margins of the pages of the paper form.
 
-### What's the OMB expiration date (in M/D/YYYY format) for this form? Example: '1/31/2019'
+### What's the OMB expiration date (in M/D/YYYY format) for this form? Example: `1/31/2019`
 
 Again similarly to the last question, this is more information from the OMB data, which lives in the margins of the pages of the paper form.
 
-### What's the benefit description for this form? Examples: 'education benefits' or 'disability claims increase'
+### What's the benefit description for this form? Examples: `education benefits` or `disability claims increase`
 
-This question is a bit more nebulous. We have a description of the type of benefits that you would be getting by using this form. Other examples are "health care benefits" and "veteran id card."
+This question is a bit more nebulous. We have a description of the type of benefits that you would be getting by using this form. Other examples are `health care benefits` and `veteran id card`.
 
 ### What kind of form template would you like to start with?
 
@@ -96,6 +89,8 @@ Choose from the following options:
 ## You're done!
 
 Once you've answered all those questions, you're done and the generator will create the files for you. To see them in your local development environment, you'll need to build again or restart the watch task you have running.
+
+Once you've done that, you can access the URL at `http://localhost:3001/APP_ROOT_URL`. Replace `APP_ROOT_URL` with the root URL for your application.
 
 To learn more about using the generator and working with the generated code, see our [forms documentation](/forms).
 
