--- a/packages/documentation/src/pages/getting-started/common-tasks/new-end-to-end-test.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/new-end-to-end-test.mdx
@@ -48,13 +48,28 @@ _These are recommendations not requirements._
 
 A mock server runs with the end-to-end tests to allow tests to make production-like calls.
 
-See the [Mocks section of Cypress Resources Reference Guide](https://github.com/department-of-veterans-affairs/va.gov-team/tree/master/platform/testing/end-to-end#mocks) for detailed mock API examples currently used.
+See the [Mocks section of Cypress Resources Reference Guide](https://github.com/department-of-veterans-affairs/va.gov-team/blob/master/platform/testing/end-to-end/vsp-cypress-resources.md#mocks) for detailed mock API examples currently used.
+
+Below are some of the commonly used Cypress mocks (accessible from the link above).
+
+- confirmedVA
+- confirmedCC
+- requests
+- cancelReasons
+- supportedSites
+- facilities
+- facilities983
+- clinicList983
+- slots
+- getVAAppointmentMock
+- getExpressCareRequestCriteriaMock
+- getParentSiteMock
 
 ## Custom Cypress commands
 
 Cypress supports extending its client api with [custom commands](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/testing/e2e/cypress/support/commands).
 
-Below are some of the commonly used custom Nightwatch commands (accessible from the link above).\_
+Below are some of the commonly used custom Cypress commands (accessible from the link above).
 
 - axeCheck
 - expandAccordions
